tests/ui/g-typed-route-duplicate-label.stderr
error[E0277]: `g::route(left, right)` arms must use distinct labels
 --> tests/ui/g-typed-route-duplicate-label.rs:6:22
  |
6 |     let _ = g::route(arm_one, arm_two);
  |                      ^^^^^^^ route arms reuse the same label
  |
  = help: the trait `hibana::global::DistinctRouteLabels<StepCons<SendStep<Role<0>, Role<0>, hibana::global::Message<hibana::global::LabelMarker<5>, ()>>, StepNil>>` is not implemented for `StepCons<SendStep<Role<0>, Role<0>, hibana::global::Message<hibana::global::LabelMarker<5>, ()>>, StepNil>`
note: required by a bound in `route`
 --> src/global.rs
  |
  | pub const fn route<LeftSteps, RightSteps>(
  |              ----- required by a bound in this function
...
  |     LeftSteps: RouteArmHead + SameRouteController<RightSteps> + DistinctRouteLabels<RightSteps>,
  |                                                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `route`
